bug fix: aside overflow
change width on an aside to 100% to auto;

--- a/css/_aside.scss
+++ b/css/_aside.scss
@@ -28,7 +28,7 @@ aside {
 .full {
 	aside {
 		@include breakpoint(teen-up) { 
-			width:100%;
+			width:auto;
 			float: none;
 			clear: both;
 			display: block;
